# Khronos

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md
cmake/: Apple-ExternalProjects.txt  FindFLAC.cmake  FindFlite.cmake  FindLibOgg.cmake  FindLibSndFile.cmake  FindLibVorbis.cmake  FindLibtool.cmake  FindPortAudio.cmake  Findpocketsphinx.cmake  Findsphinxbase.cmake  Findtritium.cmake  Unix-ExternalProjects.txt  Unix-ExternalProjects.txt.orig  Win32-ExternalProjects.txt
include/: audio.h  color.h  debug.h  util.h
src/: CMakeLists.txt  command.c  command.h  main.c
src/audio/: CMakeLists.txt  audio.h  record.c
src/util/: CMakeLists.txt  util.c
src/web/: internet.c  internet.h  json.c  json.h
test/: test_audio.c  test_util.c
